--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <!-- TOTAL -->
       <div class="row justify-content-between border border-3 border-dark">
         <div class="col-4">
-          <button onclick="checkout()" class="btn btn-success my-1">Checkout</button>
+          <button onclick="checkout()" class="btn btn-pink my-1">Checkout</button>
         </div>
         <div class="col-6 text-end">
           <h4>Total: $<span class="" id="total"> 0 </span></h4>
@@ -70,7 +70,7 @@
           <div class="card-body">
             <div class="row">
               <h5 class="text-center">Sprinkles $2</h5>
-              <button onclick="selectTopping('Sprinkles')" class="btn btn-success"><span
+              <button onclick="selectTopping('Sprinkles')" class="btn btn-pink"><span
                   class="mdi mdi-cart-variant"></span></button>
             </div>
 
@@ -84,7 +84,7 @@
           <div class="card-body">
             <div class="row">
               <h5 class="text-center">Chocolate Chips $2</h5>
-              <button onclick="selectTopping('Chocolate Chips')" class="btn btn-success"><span
+              <button onclick="selectTopping('Chocolate Chips')" class="btn btn-pink"><span
                   class="mdi mdi-cart-variant"></span></button>
             </div>
           </div>
@@ -97,7 +97,7 @@
           <div class="card-body">
             <div class="row">
               <h5 class="text-center">Coconut Flakes $2</h5>
-              <button onclick="selectTopping('Coconut Flakes')" class="btn btn-success"><span
+              <button onclick="selectTopping('Coconut Flakes')" class="btn btn-pink"><span
                   class="mdi mdi-cart-variant"></span></button>
             </div>
           </div>
@@ -115,7 +115,7 @@
           <div class="card-body">
             <div class="row">
               <h5 class="text-center">Waffle Cone $3</h5>
-              <button onclick="selectVessel('Waffle Cone')" class="btn btn-success"><span
+              <button onclick="selectVessel('Waffle Cone')" class="btn btn-pink"><span
                   class="mdi mdi-cart-variant"></span></button>
             </div>
           </div>
@@ -128,7 +128,7 @@
           <div class="card-body">
             <div class="row">
               <h5 class="text-center">Waffle Bowl $4</h5>
-              <button onclick="selectVessel('Waffle Bowl')" class="btn btn-success"><span
+              <button onclick="selectVessel('Waffle Bowl')" class="btn btn-pink"><span
                   class="mdi mdi-cart-variant"></span></button>
             </div>
           </div>
@@ -140,7 +140,7 @@
           <div class="card-body">
             <div class="row">
               <h5 class="text-center">Dipped Cone $5</h5>
-              <button onclick="selectVessel('Dipped Cone')" class="btn btn-success"><span
+              <button onclick="selectVessel('Dipped Cone')" class="btn btn-pink"><span
                   class="mdi mdi-cart-variant"></span></button>
             </div>
           </div>
@@ -157,7 +157,7 @@
           <div class="card-body">
             <div class="row">
               <h5 class="text-center">Vanilla $3</h5>
-              <button onclick="selectFlavor('Vanilla')" class="btn btn-success"><span
+              <button onclick="selectFlavor('Vanilla')" class="btn btn-pink"><span
                   class="mdi mdi-cart-variant"></span></button>
             </div>
           </div>
@@ -170,7 +170,7 @@
           <div class="card-body">
             <div class="row">
               <h5 class="text-center">Chocolate $3</h5>
-              <button onclick="selectFlavor('Chocolate')" class="btn btn-success"><span
+              <button onclick="selectFlavor('Chocolate')" class="btn btn-pink"><span
                   class="mdi mdi-cart-variant"></span></button>
             </div>
           </div>
@@ -182,7 +182,7 @@
           <div class="card-body">
             <div class="row">
               <h5 class="text-center">Cookies 'n' Cream $3</h5>
-              <button onclick="selectFlavor('Cookies n Cream')" class="btn btn-success"><span
+              <button onclick="selectFlavor('Cookies n Cream')" class="btn btn-pink"><span
                   class="mdi mdi-cart-variant"></span></button>
             </div>
           </div>
@@ -194,7 +194,7 @@
           <div class="card-body">
             <div class="row">
               <h5 class="text-center">Mint Chocolate Chip $4</h5>
-              <button onclick="selectFlavor('Mint Chocolate Chip')" class="btn btn-success"><span
+              <button onclick="selectFlavor('Mint Chocolate Chip')" class="btn btn-pink"><span
                   class="mdi mdi-cart-variant"></span></button>
             </div>
           </div>
@@ -206,7 +206,7 @@
           <div class="card-body">
             <div class="row">
               <h5 class="text-center">Birthday Cake $4</h5>
-              <button onclick="selectFlavor('Birthday Cake')" class="btn btn-success"><span
+              <button onclick="selectFlavor('Birthday Cake')" class="btn btn-pink"><span
                   class="mdi mdi-cart-variant"></span></button>
             </div>
           </div>
@@ -219,7 +219,7 @@
           <div class="card-body">
             <div class="row">
               <h5 class="text-center">Cookie Dough $4</h5>
-              <button onclick="selectFlavor('Cookie Dough')" class="btn btn-success"><span
+              <button onclick="selectFlavor('Cookie Dough')" class="btn btn-pink"><span
                   class="mdi mdi-cart-variant"></span></button>
             </div>
           </div>
